feat: add spreads and semantic placements
